--- a/pages/index.html
+++ b/pages/index.html
@@ -19,9 +19,22 @@
     <!-- Styles -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
-    <!-- Scripts -->
+      <!-- Scripts -->
     <script src="../js/navigation.js" defer></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(registration => {
+                        console.log('ServiceWorker registered');
+                        setInterval(() => {
+                            registration.update();
+                        }, 3600000); // Check for updates every hour
+                    })
+                    .catch(err => console.log('ServiceWorker registration failed:', err));
+            });
+        }
+    </script>
 </head>
 <body class="dark-theme">
     <nav class="main-nav">
